# sensei

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PRODUCT-IDEATION.md  README.md  RESEARCH-BIBLIOGRAPHY.md  SECURITY.md  pyproject.toml  verify-a-file.md  verify-b-file.md  worktree-setup.sh
.cursor/rules/: kanon.mdc
.github/workflows/: e2e-nightly.yml  release.yml  verify.yml
.kanon/: config.yaml  kit.md
.kanon/fidelity/: assessment-assessor-silence.md  assessment-gate-result-reported.dogfood.md  assessment-gate-result-reported.md  assessment-no-teaching-during-assessment.md  assessment-two-failure-diagnosis.md  challenger-no-praise-tokens.md  challenger-no-solution-leak.md  challenger-poses-problem-not-solution.md  goal-format-aware-framing.md  goal-full-mock-debrief.md  goal-no-praise-tokens.md  goal-no-time-pressure-stage-1.md  goal-phase-activates.md  goal-probes-not-templates.md  goal-simulated-evaluation-realism.md  hints-ambiguity-classification.md  hints-boost-visibility.md  hints-concise-summary.md  hints-triage-not-teaching.dogfood.md  hints-triage-not-teaching.md  review-cross-goal-no-duplicate-queue.md  review-dedup-recursion.dogfood.md  review-dedup-recursion.md  review-no-reteach.md  review-retrieval-only-question.md  review-sign-off.md  review-silence-profile.md  reviewer-identifies-defect.md  reviewer-no-praise-tokens.dogfood.md  reviewer-no-praise-tokens.md  status-no-praise-tokens.dogfood.md  status-no-praise-tokens.md  status-structured-report.md  tutor-no-praise-tokens.md  tutor-socratic-not-monologue.md
.kiro/steering/: kanon.md
.roo/rules/: kanon.md
.windsurf/rules/: kanon.md
ci/: check_adr_immutability.py  check_changelog_links.py  check_deps.py  check_foundations.py  check_links.py  check_package_contents.py  check_plan_completion.py  check_release_audit.py  check_security_patterns.py  check_test_quality.py  generate_manifest.py  release-preflight.py
ci/validators/: changelog_links.py  foundations_integrity.py
docs/: development-process.md  kanon-implementation.md  sensei-implementation.md
docs/decisions/: 0001-spec-driven-development-process.md  0002-agent-bootstrap.md  0003-tool-specific-agent-hooks.md  0004-sensei-distribution-model.md  0005-adr-lite-format.md  0006-hybrid-runtime-architecture.md  0007-review-config-knobs.md  0008-review-writes-audit-fields-only.md  0009-maintainer-tooling-outside-engine.md  0010-pypi-distribution-name.md  0011-transcript-fixtures.md  0012-foundations-layer.md  0013-context-composition.md  0014-principles-over-state-machines.md  0015-unified-goal-pipeline.md  0016-worktree-agent-isolation.md  0017-file-drop-ingestion.md  0018-curriculum-boosting.md  0019-universal-inbox.md  0020-phase-overlay-composition.md  0020-release-self-bypass.md  0021-phase-overlay-composition.md  0022-script-runner-wrapper.md  0023-defaults-schema-required-keys.md  0024-release-audit-log-required.md  0025-runtime-config-hard-fail.md  0026-publish-gate-manual-approval.md  0027-tier2-gate-expansion.md  0028-tier2-gate-breadth-enforcement.md  README.md  _template.md
docs/design/: README.md  _template.md  behavioral-modes.md  cross-goal-intelligence.md  curriculum-graph.md  emotional-state-tracking.md  folder-structure.md  goal-lifecycle.md  hints-ingestion.md  interleaving.md  learner-profile-state.md  metacognitive-tracking.md  parallel-agents.md  performance-training.md  release-workflow.md  review-protocol.md  session-notes.md  temporal-metadata.md  transcript-fixtures.md
docs/foundations/: README.md  traceability.md  vision.md
docs/operations/: README.md  backup-recovery.md  branch-protection.md  context-budget.md  (+3 more)
inbox/: April-10_00-25_Leetcode-for-System-Design.md  April-11_23-18_DSA-Roadmap.md  April-12_20-40_System-Design-Detailed-Roadmap.md  April-12_22-51_LeetCode-Patterns-for-DSA-Interviews.md  April-13_10-21_After-Senior-Backend-Interviews-I-Realized.md  April-13_10-21_This-Job-Market-for-Software-Developers.md  April-13_15-25_YouTube-Video-Interview-Prep.md  April-15_02-43_System-Design-Cheatsheet-2026.md  April-15_02-56_AI-Research-Papers-for-Engineer-Interviews.md  April-15_13-58_Getting-Started-with-System-Design.md  April-15_14-02_13-Free-Anthropic-AI-Courses.md  April-15_14-03_API-Design-Concepts-Before-Interviews.md  April-17_03-42_Rate-Limiting-and-Throttling-in-System-Design.md  April-17_04-01_AI-Cloud-Master-Tree.md  April-17_19-58_System-Design-Roadmap.md  April-18_03-40_10-Most-Common-DSA-Problems-in-Coding-Interviews.md  April-18_03-41_Linux-Kernel-Architecture.md  April-18_03-44_JVM-Architecture.md  April-18_11-20_Fastest-Growing-GitHub-Repos-in-Finance.md  April-18_14-01_Why-People-Fail-Technical-Interviews.md  April-19_10-59_Top-10-System-Design-Questions-in-Interviews.md  April-19_11-13_9-Free-Python-Courses-from-Top-Universities.md  April-19_11-16_Backend-Development-Fundamentals.md  April-19_11-16_Backend-Engineering-Roadmap.md  April-19_11-16_System-Design-Answer-Framework.md  April-19_11-48_Backend-Developer-Must-Know-Concepts.md  April-7_08-10_What-actually-matters-in-coding-interviews.md  April-9_08-04_Best-Skills-That-Actually-Get-You-Hired-2026.md  April-9_08-40_120-System-Design-Concepts.md  April-9_10-00_System-Design-Case-Studies-in-1-Month.md  April-9_10-03_Dont-Overthink-It-Build-These-Projects.md  April-9_10-04_Developers-Who-Dont-Have-Time-for-Tests.md  April-9_10-09_Cloud-Roadmap-2026.md  April-9_17-56_25-Blogs-to-Learn-25-DevOps-Concepts.md  April-9_17-57_10-System-Design-Concepts-Every-Backend-Dev-Should-Know.md
scripts/: migrate_fixtures_to_kanon.py  worktree-setup.sh  worktree-status.sh  worktree-teardown.sh
tests/: README.md  conftest.py  test_atomic_write.py  test_cli.py  test_cross_goal.py  test_curriculum_integration.py  test_e2e_smoke.py  test_frontier.py  test_hint_decay.py  test_init.py  test_migrate.py  test_mutate_graph.py  test_run_sh.py  test_schema_validation.py
(+321 files in other folders)
