[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensei-tutor"
dynamic = ["version"]
description = "A pip-installable CLI that scaffolds a learning-environment folder for any LLM agent to operate as an adaptive mentor."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jsonschema>=4.18",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.18",
]

[project.scripts]
sensei = "sensei.cli:main"

[tool.hatch.version]
path = "src/sensei/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sensei"]

[tool.hatch.build.targets.sdist]
include = [
    "src/sensei",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["sensei"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
src = ["src", "tests", "ci"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage floor was 60% at v0.1.0a9 (measured 63%, depressed by subprocess-invoked
# tests pytest-cov couldn't observe). After converting test_frontier.py and
# test_mutate_graph.py to direct main(argv) calls, observed coverage is ~81%;
# the floor is ratcheted to 80%. Remaining low-coverage modules: migrate.py (~42%)
# and hint_decay.py (~69%) — follow-up to add direct-main tests for them too.
addopts = "--cov=sensei --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/sensei"]
branch = true
