[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensei-tutor"
dynamic = ["version"]
description = "A pip-installable CLI that scaffolds a learning-environment folder for any LLM agent to operate as an adaptive mentor."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jsonschema>=4.18",
    "packaging>=23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "kanon-kit==0.2.0a8",
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.11",  # >=0.11: UP038 no longer enforced on (int, float) by default
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.18",
]

[project.scripts]
sensei = "sensei.cli:main"

[tool.hatch.version]
path = "src/sensei/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sensei"]

[tool.hatch.build.targets.sdist]
include = [
    "src/sensei",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["sensei"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
src = ["src", "tests", "ci"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage floor progression:
#   - v0.1.0a9: 60% (measured 63%, subprocess-only tests depressed the signal)
#   - post-a9 round 1: 80% (frontier.py + mutate_graph.py converted to direct main(argv))
#   - post-a9 round 2: 83% (hint_decay.py + migrate.py converted; measured 85%)
#   - post-a9 round 3: 89% (cli.py error-path tests for status + upgrade + verify; measured 91%)
# Remaining gaps are branch-level only. Further ratchet once the first real
# schema migration lands — migrate.py's migration-applied branch is currently
# unreachable because CURRENT_PROFILE_VERSION and CURRENT_GOAL_VERSION are 0.
addopts = "--cov=sensei --cov-report=term-missing --cov-fail-under=92 --ignore=tests/e2e"

[tool.coverage.run]
source = ["src/sensei"]
branch = true
